# BF-APNN

./: README.md  pyproject.toml  requirements.txt
data/marshak/: CMakeLists.txt  FVM1D.h  FVM1D.template.h  Mesh1DED.h  Pn_slab.h  Solution.h  Vector.h
data/marshak/examples/: Makefile  MarshakWave  MarshakWave.cpp  plot.py  plot_rad.m  readme  run.sh  temp  test1  test1.cpp  time_0p5
data/marshak/examples/mesh1600_30_90_smooth/: data_1  data_10  data_11  data_12  data_13  data_1e-15  data_2  data_3  data_4  data_5  data_6  data_7  data_8  data_9
data/marshak/examples/mesh4800_30_90_smooth/: data_1  data_10  data_11  data_12  data_13  data_1e-15  data_2  data_3  data_4  data_5  data_6  data_7  data_8  data_9
data/marshak/examples/sigma30/: 1e-02_3240_0.01  1e-02_3240_0.02  1e-02_3240_0.03  1e-02_3240_0.04  1e-02_3240_0.05  1e-02_3240_0.06  1e-02_3240_0.07  1e-02_3240_0.08  1e-02_3240_0.09  1e-02_3240_0.10  1e-02_3240_0.11  1e-02_3240_0.12  1e-02_3240_0.13  1e-02_3240_0.14  1e-02_3240_0.15  1e-02_3240_0.16  1e-02_3240_0.17  1e-02_3240_0.18  1e-02_3240_0.19  1e-02_3240_0.20  1e-02_3240_0.21  1e-02_3240_0.22  1e-02_3240_0.23  1e-02_3240_0.24  1e-02_3240_0.25  1e-02_3240_0.26  1e-02_3240_0.27  1e-02_3240_0.28  1e-02_3240_0.29  1e-02_3240_0.30  1e-02_3240_0.31  1e-02_3240_0.32  1e-02_3240_0.33  1e-02_3240_0.34  1e-02_3240_0.35  1e-02_3240_0.36  1e-02_3240_0.37  1e-02_3240_0.38  1e-02_3240_0.39  1e-02_3240_0.40  (+368 more)
data/marshak/examples/sigma300/: 1e-02_1600_1  1e-02_1600_10  1e-02_1600_11  1e-02_1600_12  1e-02_1600_13  1e-02_1600_14  1e-02_1600_15  1e-02_1600_16  1e-02_1600_17  1e-02_1600_18  1e-02_1600_19  1e-02_1600_1e-15  1e-02_1600_2  1e-02_1600_20  1e-02_1600_21  1e-02_1600_22  1e-02_1600_23  1e-02_1600_24  1e-02_1600_25  1e-02_1600_26  1e-02_1600_27  1e-02_1600_28  1e-02_1600_29  1e-02_1600_3  1e-02_1600_30  1e-02_1600_31  1e-02_1600_32  1e-02_1600_33  1e-02_1600_34  1e-02_1600_35  1e-02_1600_36  1e-02_1600_37  1e-02_1600_38  1e-02_1600_39  1e-02_1600_4  1e-02_1600_40  1e-02_1600_41  1e-02_1600_42  1e-02_1600_43  1e-02_1600_44  (+50 more)
(+148 files in other folders)
