[project]
name = "bf-apnn"
version = "0.1.0"
description = "Boundary-Fitted Adaptive Physics-Informed Neural Network (JAX + Flax NNX)"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "a2wsgi==1.10.10",
    "colorama==0.4.6",
    "cython==3.2.2",
    "email_validator==2.3.0",
    "eval_type_backport==0.3.1",
    "exceptiongroup==1.3.1",
    "fastapi_cli==0.0.16",
    "flax==0.10.5",
    "gunicorn==23.0.0",
    "httpx==0.28.1",
    "ipython==8.12.3",
    "itsdangerous==2.2.0",
    "jax==0.5.3",                  
    "Jinja2==3.1.2",
    "loop==1.0.0",
    "matplotlib==3.8.2",
    "multipart==1.3.0",
    "numpy==2.3.5",
    "optax==0.2.6",
    "orbax==0.1.9",
    "orjson==3.11.5",
    "python_multipart==0.0.20",
    "pytreeclass==0.11.0",
    "rich==14.2.0",
    "scipy==1.16.3",
    "sniffio==1.2.0",
    "speedups==1.4.0",
    "toml==0.10.2",
    "tomli==2.3.0",
    "ujson==5.11.0",
    "url_parser==3.0.3",
    "Werkzeug==3.1.4",
    "winloop==0.4.0",
    "wsproto==1.3.2",
]

[project.optional-dependencies]

dev = [
    "hypothesis==6.148.7",
    "pytest==9.0.2",
    "outcome==1.3.0.post0",        
    "python_socks==2.7.3",         
    "trio==0.32.0",               
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.uv]

dev-dependencies = [
    "hypothesis>=6.0",
    "pytest>=9.0",
    "trio>=0.32",
]


[tool.ruff]
target-version = "py310"
line-length = 100

[tool.black]
line-length = 100
target-version = ["py310"]